--- a/src/app/components/ships/ship-card/ship-card.component.html
+++ b/src/app/components/ships/ship-card/ship-card.component.html
@@ -20,7 +20,7 @@ class="animated fadeIn">
 
       <button fxFlex mat-fab color="primary" class="ship-card-btn" aria-label="open ships details"
         (click)="openDialogInfo()">
-        <mat-icon svgIcon="ship-info-icon" aria-hidden="false"></mat-icon>
+        <mat-icon aria-hidden="false" aria-label="Example home icon">info</mat-icon>
       </button>
 
       <p fxFlex>{{ship.model}} </p>
