--- a/src/app/components/page-one/page-one.component.html
+++ b/src/app/components/page-one/page-one.component.html
@@ -1,1 +1,14 @@
-<p>page-one works!</p>
+<div fxLayout="column" fxLayoutAlign="center center">
+    <mat-spinner *ngIf="loading"></mat-spinner>
+  </div>
+  <div *ngIf="loaded">
+  
+    
+    <div fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign="start" fxLayoutGap="20px"
+      fxLayoutGap.xs="0">
+  
+      <div *ngFor="let vehicle of vehicles; let i = index">
+        <app-vehicles-card [vehicle]="vehicle"></app-vehicles-card>
+      </div>
+    </div>
+  </div>
