implementing pagination circuit to app

--- a/src/app/components/page-two/page-two.component.html
+++ b/src/app/components/page-two/page-two.component.html
@@ -3,11 +3,15 @@
 </div>
 <div *ngIf="loaded">
 
+  <div fxLayout="row" fxLayoutAlign="center center">
+    <pagination-controls (pageChange)="pageChanged($event)" class="text-center"></pagination-controls>
+  </div>
+
   
   <div fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign="start" fxLayoutGap="20px"
     fxLayoutGap.xs="0">
 
-    <div *ngFor="let person of people; let i = index">
+    <div *ngFor="let person of people | paginate: config; ; let i = index">
       <app-person-card [person]="person"></app-person-card>
     </div>
   </div>
