--- a/src/app/components/page-one/page-one.component.html
+++ b/src/app/components/page-one/page-one.component.html
@@ -1,14 +1,17 @@
 <div fxLayout="column" fxLayoutAlign="center center">
-    <mat-spinner *ngIf="loading"></mat-spinner>
+  <mat-spinner *ngIf="loading"></mat-spinner>
+</div>
+
+<div *ngIf="loaded">
+  <div fxLayout="row" fxLayoutAlign="center center">
+    <pagination-controls (pageChange)="pageChanged($event)" class="text-center"></pagination-controls>
   </div>
-  <div *ngIf="loaded">
-  
-    
-    <div fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign="start" fxLayoutGap="20px"
-      fxLayoutGap.xs="0">
-  
-      <div *ngFor="let vehicle of vehicles; let i = index">
-        <app-vehicles-card [vehicle]="vehicle"></app-vehicles-card>
-      </div>
+
+  <div fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign="start" fxLayoutGap="20px"
+    fxLayoutGap.xs="0">
+
+    <div *ngFor="let vehicle of vehicles| paginate: config; ; let i = index">
+      <app-vehicles-card [vehicle]="vehicle"></app-vehicles-card>
     </div>
   </div>
+</div>
